--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ button {
 
 i {
     font-size: 2rem;
+    cursor: pointer;
 }
 
 .mt {
@@ -96,8 +97,13 @@ i {
         background-image: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(136,132,183,0.6) 41%, rgba(244,113,155,0.6) 62%, rgba(255,255,255,0.2) 100%), url('../img/Sound-Waves.png');
         background-repeat: no-repeat;
         background-position: 50% 50%;
-        /* background: rgb(255,255,255);
-        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(136,132,183,0.6) 41%, rgba(244,113,155,0.6) 62%, rgba(255,255,255,0.2) 100%); */
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+        box-shadow: 0rem 0rem 1.5rem rgba(0,0,0,.2);
     }
     
     .display-control__heading {
@@ -142,7 +148,6 @@ i {
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        border: 3px solid #fff;
     }
 
     .fa-pause-circle,
@@ -161,6 +166,7 @@ i {
     .list-item {
         padding: 2rem 1.6rem;
         background-color: #f3f2f7;
+        margin-top: 414px;
     }
 
     .item {
