--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ i {
         justify-content: space-around;
         align-items: center;
         padding: 2rem 2.4rem;
+        margin-top: 3rem;
     }
 
     .display-control__gruop-icon i {
@@ -133,10 +134,12 @@ i {
     }
 
     .display-control__img {
-        margin: 2.4rem 0;
+        margin-top: 2.4rem;
+        margin-bottom: 2.4rem;
     }
     
     .item-img {
+        position: relative;
         display: flex;
         margin: 0 auto;
         background-size: cover;
@@ -151,7 +154,7 @@ i {
     }
 
     .fa-pause-circle,
-    .fa-play {
+    .btn-pause .fa-play-circle {
         display: block;
         font-size: 5.6rem;
         color: var(--color-pause) !important;
@@ -159,14 +162,14 @@ i {
         transition: all .3s ease-in-out;
         /* box-shadow: 0 .5rem 2rem rgba(238, 37, 101,.5); */
     }
-    .fa-play {
+    .btn-pause .fa-play-circle {
         display: none;
     }
 
     .list-item {
         padding: 2rem 1.6rem;
         background-color: #f3f2f7;
-        margin-top: 414px;
+        margin-top: 455px;
     }
 
     .item {
@@ -202,6 +205,58 @@ i {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+
+    .seekslider {
+        padding: 0rem 4.4rem;;
+        margin-bottom: 2rem;
+    }
+
+    .progress {
+        display: block;
+        width: 100%;
+        height: 4px;
+        -webkit-appearance: none;
+        border-radius: 1rem;
+        outline: none;
+        position: relative;
+    }
+
+    .progress::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 0%;
+        background-color:var(--color-border-image);
+    }
+
+    .progress::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 1rem;
+        height: 1rem;
+        background-color: var(--color-icon);
+        border-radius: 50%;
+        cursor: pointer;
+        outline: none;
+        transform: scale(1);
+    }
+
+    .progress:active::-webkit-slider-thumb {
+        transform: scale(1.2);
+    }
+
+    .time {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: .5rem;
+    }
+
+    .time span {
+        color: var(--color-heading);
+        font-size: 1rem;
     }
 
 }
